--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -13,6 +13,8 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "@supabase/supabase-js": "^2.93.3",
     "lucide-react": "^0.563.0",
     "mercadopago": "^2.12.0",
