--- a/player-windows/package.json
+++ b/player-windows/package.json
@@ -1,7 +1,7 @@
 {
     "name": "player-windows",
-    "version": "16.0.0",
-    "description": "Rede Conecta - Digital Signage Player for Windows",
+    "version": "18.0.0",
+    "description": "Rede Conecta - Digital Signage Player for Windows (Offline-First)",
     "main": "electron/main.js",
     "scripts": {
         "dev": "vite --port 5180",
@@ -14,8 +14,10 @@
     "license": "MIT",
     "dependencies": {
         "@supabase/supabase-js": "^2.49.1",
+        "better-sqlite3": "^12.6.2",
         "electron-updater": "^6.3.9",
         "lucide-react": "^0.511.0",
+        "node-mpv": "^1.5.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0"
     },
@@ -23,9 +25,11 @@
         "@types/react": "^19.1.0",
         "@types/react-dom": "^19.1.0",
         "@vitejs/plugin-react": "^4.5.0",
+        "7zip-bin": "^5.2.0",
         "concurrently": "^9.1.2",
         "electron": "^35.1.5",
         "electron-builder": "^26.0.12",
+        "node-7z": "^3.0.0",
         "vite": "^7.0.0"
     },
     "build": {
@@ -43,12 +47,25 @@
             "target": [
                 "nsis"
             ],
-            "icon": "public/icon.ico"
+            "icon": "public/icon.ico",
+            "extraResources": [
+                {
+                    "from": "mpv/mpv.exe",
+                    "to": "mpv/mpv.exe"
+                },
+                {
+                    "from": "mpv/d3dcompiler_43.dll",
+                    "to": "mpv/d3dcompiler_43.dll"
+                }
+            ]
         },
         "nsis": {
             "oneClick": true,
             "perMachine": true,
-            "allowToChangeInstallationDirectory": false
+            "allowToChangeInstallationDirectory": false,
+            "allowElevation": true,
+            "runAfterFinish": true,
+            "deleteAppDataOnUninstall": false
         }
     }
 }
