--- a/player-windows/package.json
+++ b/player-windows/package.json
@@ -1,13 +1,15 @@
 {
     "name": "player-windows",
-    "version": "19.1.3",
-    "description": "Rede Conecta - Digital Signage Player for Windows (Offline-First)",
+    "version": "19.2.0",
+    "description": "Rede Conecta - Digital Signage Player (Offline-First, Cross-Platform)",
     "main": "electron/main.js",
     "scripts": {
         "dev": "vite --port 5180",
         "build": "vite build",
         "electron:dev": "concurrently -k \"vite --port 5180\" \"node -e \\\"setTimeout(()=>require('child_process').spawn(require('electron'),['.']),3000)\\\"\"",
         "electron:build": "vite build && electron-builder",
+        "electron:build:linux": "vite build && electron-builder --linux",
+        "electron:build:win": "vite build && electron-builder --win",
         "preview": "vite preview"
     },
     "author": "Antigravity",
@@ -48,7 +50,6 @@
                 "nsis"
             ],
             "artifactName": "Rede-Conecta-Player-Setup-${version}.${ext}",
-            "icon": "public/icon.ico",
             "extraResources": [
                 {
                     "from": "mpv/mpv.exe",
@@ -59,6 +60,22 @@
                     "to": "mpv/d3dcompiler_43.dll"
                 }
             ]
+        },
+        "linux": {
+            "target": [
+                "AppImage",
+                "deb"
+            ],
+            "artifactName": "Rede-Conecta-Player-${version}.${ext}",
+            "category": "Utility",
+            "desktop": {
+                "entry": {
+                    "Name": "Rede Conecta Player",
+                    "Comment": "Digital Signage Player",
+                    "Terminal": "false",
+                    "StartupWMClass": "rede-conecta-player"
+                }
+            }
         },
         "nsis": {
             "oneClick": true,
