--- a/player-windows/package.json
+++ b/player-windows/package.json
@@ -18,8 +18,8 @@
         "@supabase/supabase-js": "^2.49.1",
         "better-sqlite3": "^12.6.2",
         "electron-updater": "^6.3.9",
+        "ffmpeg-static": "^5.3.0",
         "lucide-react": "^0.511.0",
-        "node-mpv": "^1.5.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0"
     },
@@ -49,17 +49,7 @@
             "target": [
                 "nsis"
             ],
-            "artifactName": "Rede-Conecta-Player-Setup-${version}.${ext}",
-            "extraResources": [
-                {
-                    "from": "mpv/mpv.exe",
-                    "to": "mpv/mpv.exe"
-                },
-                {
-                    "from": "mpv/d3dcompiler_43.dll",
-                    "to": "mpv/d3dcompiler_43.dll"
-                }
-            ]
+            "artifactName": "Rede-Conecta-Player-Setup-${version}.${ext}"
         },
         "linux": {
             "target": [
