feat: integrate Sentry error monitoring (Sprint 3)
- Admin panel: @sentry/react with browser tracing + session replay
- Player: @sentry/react with browser tracing
- ErrorBoundary: auto-reports to Sentry via captureException
- Sentry disabled in dev mode, ready for DSN config

--- a/player-windows/package.json
+++ b/player-windows/package.json
@@ -17,6 +17,7 @@
     "author": "Antigravity",
     "license": "MIT",
     "dependencies": {
+        "@sentry/react": "^10.38.0",
         "@supabase/supabase-js": "^2.49.1",
         "better-sqlite3": "^12.6.2",
         "electron-updater": "^6.3.9",
