--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -17,6 +17,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg/util": "^0.12.2",
+    "@sentry/react": "^10.38.0",
     "@supabase/supabase-js": "^2.93.3",
     "lucide-react": "^0.563.0",
     "mercadopago": "^2.12.0",
