fix: correct artifact paths to dist-electron + bump v20.2.4

--- a/.github/workflows/player-release.yml
+++ b/.github/workflows/player-release.yml
@@ -25,15 +25,15 @@ jobs:
       - run: npx electron-builder --win --publish never
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: List dist contents
-        run: Get-ChildItem -Recurse dist/ | Select-Object FullName, Length
+      - name: List build output
+        run: Get-ChildItem -Recurse dist-electron/ | Select-Object FullName, Length
       - uses: actions/upload-artifact@v4
         with:
           name: windows-installer
           path: |
-            player-windows/dist/*.exe
-            player-windows/dist/*.yml
-            player-windows/dist/*.blockmap
+            player-windows/dist-electron/*.exe
+            player-windows/dist-electron/latest.yml
+            player-windows/dist-electron/*.blockmap
           if-no-files-found: error
 
   build-linux:
@@ -55,15 +55,15 @@ jobs:
       - run: npx electron-builder --linux --publish never
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: List dist contents
-        run: ls -la dist/
+      - name: List build output
+        run: ls -la dist-electron/
       - uses: actions/upload-artifact@v4
         with:
           name: linux-installer
           path: |
-            player-windows/dist/*.deb
-            player-windows/dist/*.AppImage
-            player-windows/dist/*.yml
+            player-windows/dist-electron/*.deb
+            player-windows/dist-electron/*.AppImage
+            player-windows/dist-electron/latest-linux.yml
           if-no-files-found: error
 
   release:
@@ -78,7 +78,7 @@ jobs:
           path: artifacts
           merge-multiple: true
       - name: List downloaded artifacts
-        run: find artifacts/ -type f 2>/dev/null || ls -R artifacts/ || echo "No artifacts found"
+        run: find artifacts/ -type f || echo "No artifacts"
       - uses: softprops/action-gh-release@v2
         with:
           files: artifacts/**/*
