--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -19,10 +19,13 @@
     "@ffmpeg/util": "^0.12.2",
     "@sentry/react": "^10.38.0",
     "@supabase/supabase-js": "^2.93.3",
+    "jspdf": "^4.1.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.563.0",
     "mercadopago": "^2.12.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-joyride": "^2.9.3",
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
